[package]
name = "solana-address-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.14.7"
solana-sdk = "1.14.7"
solana-transaction-status = "1.14.7"
indicatif = "0.17.2"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"